--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://ep-aged-field-92691210.ap-southeast-1.aws.neon.tech/connect
     username: tlsgmltjd
-    password: {PASSWORD}
+    password: ${PASSWORD}
   h2:
     console:
       enabled: true
