--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,8 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:conectdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
+    url: jdbc:postgresql://ep-silent-wind-51875573-pooler.ap-southeast-1.aws.neon.tech/aj
+    username: vvwv309
+    password: pyJTG27LOYxB
   h2:
     console:
       enabled: true
@@ -15,8 +14,7 @@ spring:
       hibernate:
         format_sql: true
         use_sql_comments: true
-        show_sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 jwt:
   secret:
